tests/baselines/reference/ambiguousOverload.errors.txt
tests/cases/compiler/ambiguousOverload.ts(5,5): error TS2322: Type 'number' is not assignable to type 'string'.
tests/cases/compiler/ambiguousOverload.ts(11,5): error TS2322: Type 'string' is not assignable to type 'number'.


==== tests/cases/compiler/ambiguousOverload.ts (2 errors) ====
    function foof(bar: string, y): number;
    function foof(bar: string, x): string;
    function foof(bar: any): any { return bar };
    var x: number = foof("s", null);
    var y: string = foof("s", null);
        ~
!!! error TS2322: Type 'number' is not assignable to type 'string'.
    
    function foof2(bar: string, x): string;
    function foof2(bar: string, y): number;
    function foof2(bar: any): any { return bar };
    var x2: string = foof2("s", null);
    var y2: number = foof2("s", null);
        ~~
!!! error TS2322: Type 'string' is not assignable to type 'number'.